2018-03-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/scripts/as2gbmap.py:
	  Migrate to Python 2/3.

2018-03-19 Philipp Klaus Krause <pkk AT spth.de>

	* configure.ac,
	  configure:
	  Migrate to Python 3.6 for default.

2018-03-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/ralloc.c,
	  src/stm8/ralloc.c:
	  Do not mark global variables as rematerializeable.

2018-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/generate-cases.py: apply patch #282 from
	  Diego Herranz
	* support/regression/generate-cases.py,
	* support/regression/HTMLgen.py: use latin-1 encoding for file I/O
	  to pass through UTF-8 and non-UTF-8 data without interpretation
	  when using Python 3

2018-03-18 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils:
	  Merge upstream GNU Binutils 2.30.
	* src/stm8/gen.c:
	  Improve cycle count accuracy for shifts.

2018-03-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve handling of rematerialized operands and I/O.

2018-03-18 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/valdiag/valdiag.py: Fix a very old bug, more fixes
	  for Python 2/3 compatibility

2018-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Implement RFE #566.

2018-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/valdiag/tests/restrict.c:
	  Test for bug #2714.
	* src/SDCCralloc.hpp:
	  Faster check for non-connected live-ranges.
	* src/stm8/ralloc.c,
	  src/stm8/gen.c,
	  src/stm8/peep.c:
	  Basic support for rematerialization of addresses for stm8.

2018-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/collate-results.py,
	  support/valdiag/valdiag.py: replace use of deprecated
	  functions for better Python 3 compatibility

2018-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/collate-results.py,
	  support/regression/compact-results.py,
	  support/valdiag/valdiag.py: